[package]
name = "pol_export"
version = "0.1.2"
edition = "2021"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
description = "Exporter for Windows Registry Policy Files"
homepage = "https://www.github.com/janstarke/pol_export"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3", features = ["derive"] }
anyhow = "1.0"