[package]
name = "pol_export"
version = "0.1.2"
edition = "2021"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
description = "Exporter for Windows Registry Policy Files"
homepage = "https://www.github.com/janstarke/pol_export"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
anyhow = "1.0"
log = {version = "0.4", features = [ "release_max_level_info" ]}
simplelog = "0.12"
binread = "2.2.0"
derive-getters = "0.3.0"
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
encoding_rs = "0.8"
hex = "0.4"