[package]
name = "pol_export"
version = "0.2.0"
edition = "2021"
authors = ["Jan Starke <Jan.Starke@telekom.de>"]
description = "Exporter for Windows Registry Policy Files"
homepage = "https://www.github.com/janstarke/pol_export"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
anyhow = "1.0"
log = {version = "0.4", features = [ "release_max_level_info" ]}
simplelog = "0.12"
binread = "2.2.0"
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
windows_types_registry = "0.1"